added borders to titles

--- a/pages/project1.html
+++ b/pages/project1.html
@@ -174,9 +174,13 @@
       <div class="black-container">
         <div class="main-container">
           <section id="description">
-            <div class="resume-date" id="project-title">
-              <h2>project 1 | the website</h2>
-              <h2>tech trends</h2>
+            <div class="mood-board">
+              <div class="border-white" id="resume-border">
+                <div class="resume-date" id="project-title">
+                  <h2>project 1 | the website</h2>
+                  <h2>tech trends</h2>
+                </div>
+              </div>
             </div>
             <article class="resume-border">
               <div class="mood-board">
@@ -248,8 +252,12 @@
             </article> 
           </section>
           <section id="the-grade">
-            <div class="resume-date" id="project-title">
-              <h2>project 1 | the grade</h2>
+            <div class="mood-board">
+              <div class="border-white" id="resume-border">
+                <div class="resume-date" id="project-title">
+                  <h2>project 1 | the grade</h2>
+                </div>
+              </div>
             </div>
             <article class="resume-border">
               <div class="grade-img">
@@ -305,9 +313,13 @@
                 </div> 
               </div>
             </article> 
-            <div class="resume-date" id="project-title">
-              <h2>the grade: desktop</h2>
-              <h2><i>page speed insights</i></h2>
+            <div class="mood-board">
+              <div class="border-white" id="resume-border">
+                <div class="resume-date" id="project-title">
+                  <h2>the grade: desktop</h2>
+                  <h2><i>page speed insights</i></h2>
+                </div>
+              </div>
             </div>
             <article class="resume-border">
               <div class="grade-text">
@@ -373,7 +385,6 @@
                 </div>
               </div>
             </article>
-
             <article class="resume-border">
               <div class="grade-text">
                 <div class="pagespeed-container">
@@ -428,14 +439,18 @@
                 </div>
               </div>  
             </article>
-            <div class="resume-date" id="project-title">
-              <h2>the grade: mobile</h2>
-              <h2>page speed insights</h2>
+            <div class="mood-board">
+              <div class="border-white" id="resume-border">
+                <div class="resume-date" id="project-title">
+                  <h2>the grade: mobile</h2>
+                  <h2>page speed insights</h2>
+                </div>
+              </div>
             </div>
             <article class="resume-border">
-              <!-- mobile pagespeed grade -->
               <div class="grade-text">
-                <div class="grade-title">
+                <div class="grades">
+                  <div class="grade-title">
                   <h3>mobile</h3>
                 </div>
                 <div class="grade-container" id="desktop-grade2">
@@ -513,9 +528,13 @@
               </div>
             </article>
             <article class="resume-border">
-              <div class="resume-date" id="project-title">
-                <h2>the grade:</h2>
-                <h2>hubspot</h2>
+              <div class="mood-board">
+                <div class="border-white" id="resume-border">
+                  <div class="resume-date" id="project-title">
+                    <h2>the grade:</h2>
+                    <h2>hubspot</h2>
+                  </div>
+                </div>
               </div>
               <div class="hubspot">
                 <div class="border-white">
@@ -605,9 +624,13 @@
           </section>
           <section id="the-design">
             <div class="design">
-              <div class="resume-date" id="project-title">
-                <h2>project 1 | the design</h2>
-                <h2>inspiration meets innovation</h2>
+              <div class="mood-board">
+                <div class="border-white" id="resume-border">
+                  <div class="resume-date" id="project-title">
+                    <h2>project 1 | the design</h2>
+                    <h2>inspiration meets innovation</h2>
+                  </div>
+                </div>
               </div>
               <div class="resume-border">
                 <div class="mood-board">
@@ -642,9 +665,13 @@
               </div>  
             </div>
             <div class="design">
-              <div class="resume-date" id="project-title">
-                <h2>project 1 | the design</h2>
-                <h2>past meets future</h2>
+              <div class="mood-board">
+                <div class="border-white" id="resume-border">
+                  <div class="resume-date" id="project-title">
+                    <h2>project 1 | the design</h2>
+                    <h2>past meets future</h2>
+                  </div>
+                </div>
               </div>
               <div class="resume-border">
                 <div class="mood-board">
@@ -679,8 +706,12 @@
               </div>
             </div> 
             <div id="wireframe">
-              <div class="resume-date" id="project-title">
-                <h2>project 1 | the frame</h2>
+              <div class="mood-board">
+                <div class="border-white" id="resume-border">
+                  <div class="resume-date" id="project-title">
+                    <h2>project 1 | the frame</h2>
+                  </div>
+                </div>
               </div>
               <article class="resume-border"> 
                 <div class="wireframe-grid">
@@ -758,27 +789,27 @@
               </article>
             </div>
             <div id="casestudy">
-              <div class="resume-date" id="project-title">
-                  <h2>Project 3 | The Case Study</h2>
+              <div class="mood-board">
+                <div class="border-white" id="resume-border">
+                  <div class="resume-date" id="project-title">
+                    <h2>Project 3 | The Case Study</h2>
+                  </div>
+                </div>
               </div>
               <div class="resume-border">
                 <div class="mood-board">
                   <div class="border-white">
-                    <div class="border-black">
-                      <div class="site-hero-img">
-                        <img 
-                          src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,c_fill,fl_lossy,fl_force_strip,dpr_auto,w_2200/v1747002518/tech_trends_welcome_cute_robot_cfl5q5.avif"
-                          alt="Tech Trends Blog Hero Image showcasing a modern, AI-powered platform for technology insights"
-                          object-fit="cover"
-                          width="761"
-                          height="491"
-                          loading="lazy"
-                          fetchpriority="low"
-                          style="object-fit: cover;aspect-ratio: 761 / 491;"
-                          decoding="async"  
-                        >
-                      <div>
-                    </div>
+                      <img 
+                        src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,c_fill,fl_lossy,fl_force_strip,dpr_auto,w_2200/v1747002518/tech_trends_welcome_cute_robot_cfl5q5.avif"
+                        alt="Tech Trends Blog Hero Image showcasing a modern, AI-powered platform for technology insights"
+                        object-fit="cover"
+                        width="761"
+                        height="491"
+                        loading="lazy"
+                        fetchpriority="low"
+                        style="object-fit: cover;aspect-ratio: 761 / 491;"
+                        decoding="async"  
+                      >
                   </div>
                 </div>
               </div>
@@ -881,7 +912,9 @@
                       </ul>
                   </div>
                   <div class="list-items casestudy">
-                    <p>This case study showcases my ability to create high-performing websites and content, positioning me as a valuable asset for roles like AI Content Specialist, SEO Specialist, and Digital Journalist.</p>
+                    <p>
+                      This case study showcases my ability to create high-performing websites and content, positioning me as a valuable asset for roles like AI Content Specialist, SEO Specialist, and Digital Journalist.
+                    </p>
                   </div>
                 </div>
                 <div class="project-links">
@@ -895,7 +928,7 @@
                     <div class="click-me">  
                       <a href="https://github.com/Allison2002/tech-trends.git">&lt; inspect the code &gt;</a>
                     </div>
-                  </div> 
+                  </div>  
                 </div>
               </article>
             </div>
