moved images and text into a vertical stack (column) for devices below 768px

--- a/pages/project1.html
+++ b/pages/project1.html
@@ -48,7 +48,7 @@
 
     <link 
       rel="preload" 
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_1500,c_fill,fl_lossy,fl_force_strip,dpr_auto/v1747049366/welcome_to_tech_trends_desktop_kd0jdv.avif" 
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_auto,c_fill,fl_lossy,fl_force_strip,dpr_auto/v1747049366/welcome_to_tech_trends_desktop_kd0jdv.avif" 
       as="image" 
       type="image/avif" 
       media="(min-width: 1200px)"
@@ -56,7 +56,7 @@
 
     <link 
       rel="preload" 
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_768,c_fill,fl_lossy,fl_force_strip,dpr_auto/v1747049367/welcome_to_tech_trends_tablet_da4vul.avif" 
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_auto,c_fill,fl_lossy,fl_force_strip,dpr_auto/v1747049367/welcome_to_tech_trends_tablet_da4vul.avif" 
       as="image" 
       type="image/avif" 
       media="(min-width: 481px) and (max-width: 1199px)" 
@@ -64,7 +64,7 @@
 
     <link 
       rel="preload" 
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_480,c_fill,fl_lossy,fl_force_strip,dpr_auto/v1746786837/welcome_to_tech_trends_mobile_ekfngl.avif" 
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_auto,c_fill,fl_lossy,fl_force_strip,dpr_auto/v1746786837/welcome_to_tech_trends_mobile_ekfngl.avif" 
       as="image" 
       type="image/avif" 
       media="(max-width: 480px)"
@@ -189,20 +189,20 @@
                     <div class="site-hero-img">
                       <picture>
                         <source
-                          srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_1500,c_fill,fl_lossy,fl_force_strip,dpr_auto/v1747049366/welcome_to_tech_trends_desktop_kd0jdv.avif"
+                          srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_auto,c_fill,fl_lossy,fl_force_strip,dpr_auto/v1747049366/welcome_to_tech_trends_desktop_kd0jdv.avif"
                           type="image/avif"
                           media="(min-width: 1200px)"
                           sizes="100vw"
                           fetchpriority="high"
                         />
                         <source
-                          srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_768,c_fill,fl_lossy,fl_force_strip,dpr_auto/v1747049367/welcome_to_tech_trends_tablet_da4vul.avif"
+                          srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_auto,c_fill,fl_lossy,fl_force_strip,dpr_auto/v1747049367/welcome_to_tech_trends_tablet_da4vul.avif"
                           type="image/avif"
                           media="(min-width: 481px) and (max-width: 1199px)"
                           sizes="100vw"
                         />
                         <img 
-                          src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_480,c_fill,fl_lossy,fl_force_strip,dpr_auto/v1746786837/welcome_to_tech_trends_mobile_ekfngl.avif"
+                          src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_auto,c_fill,fl_lossy,fl_force_strip,dpr_auto/v1746786837/welcome_to_tech_trends_mobile_ekfngl.avif"
                           alt="Tech Trends Blog Hero Image showcasing a modern, futuristic design with technology visuals and the blog's name, highlighting AI-driven content creation and insights on emerging technology trends"
                           type="image/avif"
                           width="323" 
