added media type to mobile hero img

--- a/pages/project1.html
+++ b/pages/project1.html
@@ -153,6 +153,7 @@
             <img 
               src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_480,c_fill,fl_lossy,fl_force_strip,dpr_auto/v1747014136/girlCoding-mobile_ggxuht.avif"
               alt="A woman coding on a laptop, symbolizing the integration of creativity and technology in web development"
+              type="image/avif"
               width="468"
               height="256"
               style="object-fit: cover; aspect-ratio: 1.79 / 1;"
