--- a/pages/project1.html
+++ b/pages/project1.html
@@ -40,7 +40,7 @@
 
     <link 
       rel="preload" 
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_480,c_fill,fl_lossy,fl_force_strip,dpr_auto/v1747014136/girlCoding-mobile_ggxuht.avif" 
+      href="/img/girlCoding-mobile.avif" 
       as="image" 
       type="image/avif" 
       media="(max-width: 480px)" 
@@ -151,9 +151,8 @@
               sizes="100vw"
             />
             <img 
-              src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_480,c_fill,fl_lossy,fl_force_strip,dpr_auto/v1747014136/girlCoding-mobile_ggxuht.avif"
+              src="/img/girlCoding-mobile.avif"
               alt="A woman coding on a laptop, symbolizing the integration of creativity and technology in web development"
-              type="image/avif"
               width="468"
               height="256"
               style="object-fit: cover; aspect-ratio: 1.79 / 1;"
@@ -203,7 +202,7 @@
                           sizes="100vw"
                         />
                         <img 
-                          src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_auto,c_fill,fl_lossy,fl_force_strip,dpr_auto/v1746786837/welcome_to_tech_trends_mobile_ekfngl.avif"
+                          src="/img/welcome_to_tech_trends_mobile.avif"
                           alt="Tech Trends Blog Hero Image showcasing a modern, futuristic design with technology visuals and the blog's name, highlighting AI-driven content creation and insights on emerging technology trends"
                           type="image/avif"
                           width="323" 
