updated preload link

--- a/pages/project1.html
+++ b/pages/project1.html
@@ -64,7 +64,7 @@
 
     <link 
       rel="preload" 
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_auto,c_fill,fl_lossy,fl_force_strip,dpr_auto/v1746786837/welcome_to_tech_trends_mobile_ekfngl.avif" 
+      href="/img/welcome_to_tech_trends_mobile.avif" 
       as="image" 
       type="image/avif" 
       media="(max-width: 480px)"
