--- a/pages/project1.html
+++ b/pages/project1.html
@@ -43,8 +43,9 @@
       href="/img/girlCoding-mobile.avif" 
       as="image" 
       type="image/avif" 
-      media="(max-width: 480px)" 
-    />
+      fetchpriority="high" 
+      media="(max-width: 768px)"
+    >
 
     <link 
       rel="preload" 
@@ -67,7 +68,8 @@
       href="/img/welcome_to_tech_trends_mobile.avif" 
       as="image" 
       type="image/avif" 
-      media="(max-width: 480px)"
+      fetchpriority="high" 
+      media="(max-width: 768px)"
     />
 
     <link
