--- a/pages/project1.html
+++ b/pages/project1.html
@@ -41,11 +41,7 @@
     <link 
       rel="preload" 
       href="/img/girlCoding-mobile.avif" 
-      as="image" 
-      type="image/avif" 
-      fetchpriority="high" 
-      media="(max-width: 768px)"
-    >
+      as="image" type="image/avif" media="(max-width: 480px)">
 
     <link 
       rel="preload" 
@@ -66,11 +62,7 @@
     <link 
       rel="preload" 
       href="/img/welcome_to_tech_trends_mobile.avif" 
-      as="image" 
-      type="image/avif" 
-      fetchpriority="high" 
-      media="(max-width: 768px)"
-    />
+      as="image" type="image/avif" media="(max-width: 480px)">
 
     <link
       rel="icon"
