--- a/pages/project1.html
+++ b/pages/project1.html
@@ -25,7 +25,7 @@
     <link 
       rel="preload" 
       href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_1500,c_fill,fl_lossy,fl_force_strip,dpr_auto/v1747014137/girlCoding-desktop_qjepoe.avif" 
-      as="image" 
+      as="style" 
       type="image/avif" 
       media="(min-width: 1200px)" 
     />
@@ -70,9 +70,9 @@
       type="image/webp"
     />
 
-    <link rel="stylesheet" href="/styles.css" media="print" onload="this.onload=null;this.media='all';">
+    <link rel="preload" href="/styles.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
 
-    <noscript><link rel="stylesheet" href="/styles.css"></noscript>
+    <noscript><link rel="stylesheet" href="/assets/styles.css"></noscript>
 
     <script type="application/ld+json">
       {
