--- a/pages/project1.html
+++ b/pages/project1.html
@@ -41,7 +41,10 @@
     <link 
       rel="preload" 
       href="/img/girlCoding-mobile.avif" 
-      as="image" type="image/avif" media="(max-width: 480px)">
+      as="image" 
+      type="image/avif" 
+      media="(max-width: 480px)">
+
 
     <link 
       rel="preload" 
@@ -62,7 +65,9 @@
     <link 
       rel="preload" 
       href="/img/welcome_to_tech_trends_mobile.avif" 
-      as="image" type="image/avif" media="(max-width: 480px)">
+      as="image" 
+      type="image/avif" 
+      media="(max-width: 480px)">
 
     <link
       rel="icon"
@@ -74,6 +79,140 @@
 
     <noscript><link rel="stylesheet" href="/assets/styles.css"></noscript>
 
+    <style>
+      .canvas-skills-grid {
+        display: grid;
+        grid-template-columns: 1fr 2fr;
+        min-height: clamp(300px, 40vh, 500px);
+        width: 100%;
+        max-width: 100vw;
+        height: auto;
+        min-height: 17rem;
+        gap: 0;
+      }
+
+      .canvas-skills-img {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        border-bottom: 0.5em solid black;
+        border-left: .3em solid black;
+        border-right: .3em solid black;
+        height: auto;
+        width: 100%;
+        max-width: 100vw;
+        aspect-ratio: 1.79 / 1;
+        min-height: 5rem;
+      }
+
+      .canvas-skills-img img {
+        display: block;
+        width: 100%;
+        height: auto;
+        object-fit: cover;
+        aspect-ratio: inherit;
+      }
+
+      img[fetchpriority="high"] {
+        contain: layout paint;
+        will-change: transform;
+      }
+
+      .canvas-skills-title {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        border-bottom: 0.5em solid black;
+        border-left: .3em solid black;
+        border-right: .3em solid black;
+        height: auto;
+        max-width: 100vw;
+        width: 100%;
+        min-height: 5rem;
+      }
+
+      .canvas-skills-title h1 {
+        font-size: clamp(3.5rem, 4vw, 4rem);
+        padding: 0;
+        min-height: 3rem;
+        height: auto;
+      }
+
+      .canvas-skills-title h2 {
+        font-size: 2vw;
+        padding: 1vw 0;
+        min-height: 2rem;
+        height: auto;
+      }
+
+      @media (max-width: 768px) {
+        .canvas-skills-grid {
+          display: flex;
+          flex-direction: column;
+          width: 100%;
+          height: auto;
+          min-height: 3rem;
+          align-items: center;
+          justify-content: space-between;
+          min-height: clamp(300px, 40vh, 500px);
+        }
+
+        .canvas-skills-img {
+          flex: 1;
+          width: 100%;
+          max-width: 768px;
+          margin-bottom: 1rem;
+        }
+
+        .canvas-skills-img {
+          width: 768px;
+          max-width: 768px;
+          height: auto;
+          min-height: 3rem;
+          aspect-ratio: 1.79 / 1;
+        }
+
+        .canvas-skills-title {
+          width: 100%;
+          max-width: 100vw;
+          height: auto;
+          border-top: 1em solid black;
+          border-right: 1em solid black;
+          border-left: 1em solid black;
+        }
+
+        .canvas-skills-title h1 {
+          font-size: 2rem;
+          padding: 1em 0 0;
+        }
+
+        .canvas-skills-title h2 {
+          font-size: 1.5rem;
+          padding: 0 0 1em;
+        }
+      }
+
+      @media (max-width: 480px) {
+        .canvas-skills-img {
+          max-width: 480px;
+          height: auto;
+          min-height: 3rem;
+          aspect-ratio: 1.79 / 1;
+          width: 468px;
+          overflow: hidden;
+          display: block;
+        }
+
+        .canvas-skills-img img {
+          width: 100%;
+          height: auto;
+          aspect-ratio: inherit;
+          border: 0.4em solid white;
+        }
+      }
+    </style>
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
