updated preload link

--- a/pages/project1.html
+++ b/pages/project1.html
@@ -25,7 +25,7 @@
     <link 
       rel="preload" 
       href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_1500,c_fill,fl_lossy,fl_force_strip,dpr_auto/v1747014137/girlCoding-desktop_qjepoe.avif" 
-      as="style" 
+      as="image" 
       type="image/avif" 
       media="(min-width: 1200px)" 
     />
