--- a/pages/project1.html
+++ b/pages/project1.html
@@ -136,15 +136,17 @@
       .canvas-skills-title h1 {
         font-size: clamp(3.5rem, 4vw, 4rem);
         padding: 0;
-        min-height: 3rem;
+        line-height: 1.2;
+        min-height: 3.5rem;
         height: auto;
       }
 
       .canvas-skills-title h2 {
-        font-size: 2vw;
+        font-size: clamp(1.2rem, 2vw, 2rem);
         padding: 1vw 0;
-        min-height: 2rem;
         height: auto;
+        line-height: 1.2;
+        min-height: 2.5rem;
       }
 
       @media (max-width: 768px) {
