--- a/pages/project1.html
+++ b/pages/project1.html
@@ -96,6 +96,7 @@
         border-right: .3em solid black;
         height: auto;
         width: 100%;
+        background-colo: black;
         max-width: 100vw;
         aspect-ratio: 1.79 / 1;
         min-height: 5rem;
