--- a/pages/project1.html
+++ b/pages/project1.html
@@ -9,7 +9,15 @@
 
     <link 
       rel="preload" 
-      href="/assets/fonts/PlayfairDisplay/PlayfairDisplay-VariableFont_wght.woff2"
+      href="/assets/fonts//PlayfairDisplay-VariableFont_wght.woff2"
+      as="font" 
+      type="font/woff2" 
+      crossorigin="anonymous"
+    >
+    
+    <link 
+      rel="preload" 
+      href="/assets/fonts/TT-Norms-Pro-Regular.woff2"
       as="font" 
       type="font/woff2" 
       crossorigin="anonymous"
@@ -96,7 +104,7 @@
         border-right: .3em solid black;
         height: auto;
         width: 100%;
-        background-colo: black;
+        background-color: black;
         max-width: 100vw;
         aspect-ratio: 1.79 / 1;
         min-height: 5rem;
