--- a/pages/project1.html
+++ b/pages/project1.html
@@ -32,18 +32,18 @@
 
     <link 
       rel="preload" 
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_477,c_fill,fl_lossy,fl_force_strip,dpr_auto/v1747014135/girlCoding-tablet_uund2i.avif" 
-      as="image" 
-      type="image/avif" 
-      media="(min-width: 481px) and (max-width: 1199px)" 
-    />
-
-        <link 
-      rel="preload" 
       href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_488,c_fill,fl_lossy,fl_force_strip,dpr_auto/v1747014137/girlCoding-desktop_qjepoe.avif" 
       as="image" 
       type="image/avif" 
       media="(min-width: 1200px)" 
+    />
+
+    <link 
+      rel="preload" 
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_477,c_fill,fl_lossy,fl_force_strip,dpr_auto/v1747014135/girlCoding-tablet_uund2i.avif" 
+      as="image" 
+      type="image/avif" 
+      media="(min-width: 481px) and (max-width: 1199px)" 
     />
 
     <link
@@ -57,6 +57,13 @@
     <noscript><link rel="stylesheet" href="/assets/styles.css"></noscript>
 
     <style>
+
+      header {
+        width: 100%;
+        height: auto;
+        min-height: clamp(5rem, 5vh, 8rem);
+      }
+
       .canvas-skills-grid {
         display: grid;
         grid-template-columns: 1fr 2fr;
@@ -129,6 +136,10 @@
       }
 
       @media (max-width: 768px) {
+        header {
+          min-height: 5rem;
+        }
+
         .canvas-skills-grid {
           display: flex;
           flex-direction: column;
@@ -178,6 +189,9 @@
       }
 
       @media (max-width: 480px) {
+        header {
+          min-height: 5rem;
+        }
         
         .canvas-skills-img {
           flex: 1;
