--- a/pages/project1.html
+++ b/pages/project1.html
@@ -28,7 +28,8 @@
       href="/img/girlCoding-mobile.avif" 
       as="image" 
       type="image/avif" 
-      media="(max-width: 480px)">
+      media="(max-width: 480px)"
+    >
 
     <link 
       rel="preload" 
@@ -41,6 +42,30 @@
     <link 
       rel="preload" 
       href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_477,c_fill,fl_lossy,fl_force_strip,dpr_auto/v1747014135/girlCoding-tablet_uund2i.avif" 
+      as="image" 
+      type="image/avif" 
+      media="(min-width: 481px) and (max-width: 1199px)" 
+    />
+
+    <link 
+      rel="preload" 
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_auto,c_fill,fl_lossy,fl_force_strip,dpr_auto/v1747049366/welcome_to_tech_trends_desktop_kd0jdv.avif" 
+      as="image" 
+      type="image/avif" 
+      media="(min-width: 1200px)" 
+    />
+
+    <link 
+      rel="preload" 
+      href="/img/welcome_to_tech_trends_mobile.avif" 
+      as="image" 
+      type="image/avif" 
+      media="(max-width: 480px)"
+    >
+
+    <link 
+      rel="preload" 
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_auto,c_fill,fl_lossy,fl_force_strip,dpr_auto/v1747049367/welcome_to_tech_trends_tablet_da4vul.avif" 
       as="image" 
       type="image/avif" 
       media="(min-width: 481px) and (max-width: 1199px)" 
