--- a/assets/nav.html
+++ b/assets/nav.html
@@ -42,7 +42,8 @@
           </a>
         </div>
 
-        <div class="menu-toggle" id="menu-toggle" aria-label="Open Menu">
+        <div class="menu-toggle" id="menu-toggle" role="button"   
+          tabindex="0"  aria-label="Open Menu">
           <img
             src="/img/hamburger-icon.png"
             alt="Hamburger Icon Menu"
