changed second image to load eager

--- a/pages/project1.html
+++ b/pages/project1.html
@@ -374,8 +374,9 @@
                           width="323" 
                           height="165" 
                           style="aspect-ratio: 1.957   / 1;  object-fit: cover;" 
-                          loading="lazy" 
-                          fetchpriority="low" 
+                          loading="eager" 
+                          fetchpriority="high" 
+                          importance="high"
                           decoding="async"
                         />
                       </picture>
