--- a/pages/project1.html
+++ b/pages/project1.html
@@ -305,14 +305,14 @@
         <div class="canvas-skills-img">
           <picture>
             <source
-              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_auto,fl_lossy,fl_force_strip,dpr_auto/v1747014137/girlCoding-desktop_qjepoe.avif"
+              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_auto,c_fill,fl_lossy,fl_force_strip,dpr_auto/v1747014137/girlCoding-desktop_qjepoe.avif"
               type="image/avif"
               media="(min-width: 1200px)"
               sizes="100vw"
               fetchpriority="high"
             />
             <source
-              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_auto,fl_lossy,fl_force_strip,dpr_auto/v1747014135/girlCoding-tablet_uund2i.avif"
+              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_auto,c_fill,fl_lossy,fl_force_strip,dpr_auto/v1747014135/girlCoding-tablet_uund2i.avif"
               type="image/avif"
               media="(min-width: 481px) and (max-width: 1199px)"
               sizes="100vw"
