--- a/pages/project1.html
+++ b/pages/project1.html
@@ -432,11 +432,11 @@
                 <div class="border-white">
                   <div class="border-black">
                     <img
-                      src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,c_fill,fl_lossy,fl_force_strip,dpr_auto,w_940/v1741120275/seo-grade_auwiww.avif"
+                      src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,w_940/v1743469949/seo-grade_mmztmf.avif"
                       srcset="
-                      https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,c_fill,fl_lossy,fl_force_strip,dpr_auto,w_320/v1741120275/seo-grade_auwiww.avif 320w,
-                      https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,c_fill,fl_lossy,fl_force_strip,dpr_auto,w_480/v1741120275/seo-grade_auwiww.avif 480w,
-                      https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,c_fill,fl_lossy,fl_force_strip,dpr_auto,w_500/v1741120275/seo-grade_auwiww.avif 500w
+                      https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,w_320/v1743469949/seo-grade_mmztmf.avif 320w,
+                      https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,w_480/v1743469949/seo-grade_mmztmf.avif 480w,
+                      https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,w_500/v1743469949/seo-grade_mmztmf.avif 500w
                       "
                       sizes="(max-width: 768px) 100vw, 748px"
                       alt="Tech Trends Blog SEO grade result showing performance and optimization"
