resized all mobile images

--- a/pages/project1.html
+++ b/pages/project1.html
@@ -143,7 +143,6 @@
               type="image/avif"
               media="(min-width: 1200px)"
               sizes="100vw"
-              fetchpriority="high"
             />
             <source
               srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_auto,fl_lossy,fl_force_strip,dpr_auto/v1747014135/girlCoding-tablet_uund2i.avif"
@@ -154,8 +153,8 @@
             <img 
               src="/img/girlCoding-mobile.avif"
               alt="A woman coding on a laptop, symbolizing the integration of creativity and technology in web development"
-              width="468"
-              height="256"
+              width="442"
+              height="246"
               style="object-fit: cover; aspect-ratio: 1.79 / 1;"
               loading="eager"
               fetchpriority="high"
@@ -189,14 +188,14 @@
                     <div class="site-hero-img">
                       <picture>
                         <source
-                          srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_auto,fl_lossy,fl_force_strip,dpr_auto/v1747049366/welcome_to_tech_trends_desktop_kd0jdv.avif"
+                          srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_auto,fl_lossy,fl_force_strip,c_fill,dpr_auto/v1747049366/welcome_to_tech_trends_desktop_kd0jdv.avif"
                           type="image/avif"
                           media="(min-width: 1200px)"
                           sizes="100vw"
                           fetchpriority="high"
                         />
                         <source
-                          srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_auto,fl_lossy,fl_force_strip,dpr_auto/v1747049367/welcome_to_tech_trends_tablet_da4vul.avif"
+                          srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_auto,fl_lossy,fl_force_strip,c_fill,dpr_auto/v1747049367/welcome_to_tech_trends_tablet_da4vul.avif"
                           type="image/avif"
                           media="(min-width: 481px) and (max-width: 1199px)"
                           sizes="100vw"
@@ -205,9 +204,9 @@
                           src="/img/welcome_to_tech_trends_mobile.avif"
                           alt="Tech Trends Blog Hero Image showcasing a modern, futuristic design with technology visuals and the blog's name, highlighting AI-driven content creation and insights on emerging technology trends"
                           type="image/avif"
-                          width="323" 
-                          height="165" 
-                          style="aspect-ratio: 1.957   / 1;  object-fit: cover;" 
+                          width="364" 
+                          height="186" 
+                          style="aspect-ratio: 1.957 / 1;  object-fit: cover;" 
                           loading="eager" 
                           fetchpriority="high" 
                           decoding="async"
@@ -279,11 +278,11 @@
                           sizes="100vw"
                         />
                         <img 
-                          src="/img/seo-grade.avif"
+                          src="/img/seo-grade-mobile.avif"
                           alt="Tech Trends Blog Hero Image showcasing a modern, futuristic design with technology visuals and the blog's name, highlighting AI-driven content creation and insights on emerging technology trends"
                           alt="Tech Trends Blog SEO grade result showing performance and optimization"
-                          width="940"
-                          height="810"
+                          width="364"
+                          height="314"
                           style="aspect-ratio: 1.16 / 1; object-fit: cover; display: block;"
                           loading="lazy"
                           decoding="async"
@@ -421,11 +420,11 @@
                             sizes="100vw"
                           />
                           <img 
-                            src="/img/tech-trends-started-desktop.avif"
+                            src="/img/tech-trends-start-desktop-mobile.avif"
                             alt="Tech Trends Blog SEO grade result showing performance before optimization"
-                            width="1327"
-                            height="1367"
-                            style="aspect-ratio: 473 / 500; width: 473; height: 500; object-fit: cover; display: block;"
+                            width="355"
+                            height="376"
+                            style="aspect-ratio: 355 / 376; width: 473; height: 500; object-fit: cover; display: block;"
                             loading="lazy"
                             decoding="async"
                           />
@@ -454,11 +453,11 @@
                             sizes="100vw"
                           />
                           <img 
-                            src="/img/tech-trends-finished-desktop.avif"
+                            src="/img/tech-trends-finish-desktop-mobile.avif"
                             alt="Tech Trends Blog SEO grade result showing performance after optimization"
-                            width="1335"
-                            height="1358"
-                            style="aspect-ratio: 473 / 500; width: 480; height: 480; object-fit: cover; display: block;"
+                            width="355"
+                            height="376"
+                            style="aspect-ratio: 355 / 376; width: 480; height: 480; object-fit: cover; display: block;"
                             loading="lazy"
                             decoding="async"
                           />
@@ -532,10 +531,10 @@
                           sizes="100vw"
                         />
                         <img 
-                          src="/img/tech-trends-start-mobile.avif"
+                          src="/img/tech-trends-start-mobile-mobile.avif"
                           alt="Tech Trends Blog SEO grade result showing performance before optimization"
-                          width="473"
-                          height="480"
+                          width="370"
+                          height="376"
                           loading="lazy"
                           fetchpriority="low"
                           style="object-fit: cover;aspect-ratio: 473 / 480;"
@@ -566,11 +565,11 @@
                           sizes="100vw"
                         />
                         <img 
-                          src="/img/tech-trends-finished-mobile.avif"
+                          src="/img/tech-trends-finish-mobile-mobile.avif"
                           alt="Tech Trends Blog SEO grade result showing performance before optimization"
-                          width="1335"
-                          height="1358"
-                          style="aspect-ratio: 473 / 500; width: 480; height: 480; object-fit: cover; display: block;"
+                          width="370"
+                          height="393"
+                          style="aspect-ratio: 355 / 376; width: 480; height: 480; object-fit: cover; display: block;"
                           loading="lazy"
                           decoding="async"
                         />
@@ -607,10 +606,10 @@
                         sizes="100vw"
                       />
                       <img 
-                        src="/img/tech-trends-finished-mobile.avif"
+                        src="/img/hubspot-grade-mobile.avif"
                         alt="HubSpot grade showing SEO performance score for Tech Trends Blog"
-                        width="740"
-                        height="1054"
+                        width="351"
+                        height="501"
                         loading="lazy"
                         fetchpriority="low"
                         style="object-fit: cover;aspect-ratio: 740 / 1054;"
@@ -642,10 +641,10 @@
                         sizes="100vw"
                       />
                       <img 
-                        src="/img/allisonstock-black-logo.avif"
+                        src="/img/allisonstock-black-logo-mobile.avif"
                         alt="Photo of Genny Allison, the web developer and AI content specialist"
-                        width="768"
-                        height="337"
+                        width="332"
+                        height="159"
                         loading="lazy"
                         fetchpriority="low"
                         style="object-fit: cover;aspect-ratio: 768 / 337;"
@@ -733,13 +732,13 @@
                           sizes="100vw"
                         />
                         <img 
-                          src="/img/website-design-tech-trends.avif"
+                          src="/img/website-design-tech-trends-mobile.avif"
                           alt="Website design concept for Tech Trends Blog, featuring a blend of modern and futuristic design elements that reflect the blog's focus on cutting-edge technology."
-                          width="940"
-                          height="788"
+                          width="364"
+                          height="305"
                           loading="lazy"
                           fetchpriority="low"
-                          style="object-fit: cover;aspect-ratio: 940 / 788;"
+                          style="object-fit: cover;aspect-ratio: 364 / 305;"
                           decoding="async"     
                           />
                       </picture>
@@ -789,10 +788,10 @@
                           sizes="100vw"
                         />
                         <img 
-                          src="/img/past-meets-future.avif"
+                          src="/img/past-meets-future-mobile.avif"
                           alt="A design concept for Tech Trends Blog, merging past and future elements with modern and futuristic visuals."
-                          width="600"
-                          height="700"
+                          width="364"
+                          height="425"
                           loading="lazy"
                           fetchpriority="low"
                           style="object-fit: cover;aspect-ratio: 600 / 700;"
@@ -846,11 +845,11 @@
                               sizes="100vw"
                             />
                             <img 
-                              src="/img/homepage-wireframe-tech-trends.avif"
+                              src="/img/homepage-wireframe-tech-trends-mobile.avif"
                               alt="Wireframe of the homepage layout for Tech Trends Blog"
                               object-fit="cover"
-                              width="945"
-                              height="3200"
+                              width="370"
+                              height="1255"
                               loading="lazy"
                               fetchpriority="low"
                               style="object-fit: cover;aspect-ratio: 945 / 3200;"
@@ -880,11 +879,11 @@
                               sizes="100vw"
                             />
                             <img 
-                              src="/img/category-wireframe-tech-trends.avif"
+                              src="/img/category-wireframe-tech-trends-mobile.avif"
                               alt="Wireframe of the homepage layout for Tech Trends Blog"
                               object-fit="cover"
-                              width="1050"
-                              height="1890"
+                              width="370"
+                              height="667"
                               loading="lazy"
                               fetchpriority="low"
                               style="object-fit: cover;aspect-ratio: 1050 / 1890;"
@@ -914,11 +913,11 @@
                               sizes="100vw"
                             />
                             <img 
-                              src="/img/article-wireframe-tech-trends.avif"
+                              src="/img/article-wireframe-tech-trends-mobile.avif"
                               alt="Wireframe of the article page layout for Tech Trends Blog"
                               object-fit="cover"
-                              width="945"
-                              height="3200"
+                              width="370"
+                              height="1255"
                               loading="lazy"
                               fetchpriority="low"
                               style="object-fit: cover;aspect-ratio: 945 / 3200;"
@@ -971,14 +970,14 @@
                         sizes="100vw"
                       />
                       <img 
-                        src="/img/tech_trends_welcome_cute_robot.avif"
+                        src="/img/tech-trends-welcome-cute-robot-mobile.avif"
                         alt="Tech Trends Blog Hero Image showcasing a modern, AI-powered platform for technology insights"
                         object-fit="cover"
-                        width="761"
-                        height="491"
+                        width="364"
+                        height="235"
                         loading="lazy"
                         fetchpriority="low"
-                        style="object-fit: cover;aspect-ratio: 761 / 491;"
+                        style="object-fit: cover;aspect-ratio: 364 / 235;"
                         decoding="async"
                       />
                     </picture> 
@@ -1126,10 +1125,10 @@
                           sizes="100vw"
                         />
                         <img 
-                          src="/img/allisonstock-black-logo.avif"
+                          src="/img/allisonstock-black-logo-mobile.avif"
                           alt="Photo of Genny Allison, the web developer and AI content specialist"
-                          width="768"
-                          height="337"
+                          width="364"
+                          height="159"
                           loading="lazy"
                           fetchpriority="low"
                           style="object-fit: cover;aspect-ratio: 768 / 337;"
