made small adjustments to min height, added target blank and no opener to all outside links

--- a/assets/footer.html
+++ b/assets/footer.html
@@ -37,28 +37,46 @@
         <div class="social-media">
           <ul>
             <li>
-              <a href="https://x.com/allis78978" class="links" aria-label="Visit my X (formerly Twitter) profile">
-                <img src="/img/x-bird-icon.webp" alt="X (Twitter) logo">
+              <a href="https://x.com/allis78978" class="links" aria-label="Visit my X (formerly Twitter) profile" target="_blank" rel="noopener noreferrer">
+                <img src="/img/x-bird-icon.webp" 
+                  alt="X (Twitter) logo"
+                  width: 2.5rem;
+                  height: 2.5rem;
+                  aspect-ratio: 1 / 1;
+                >
               </a>
             </li>
             <li>
-              <a href="https://www.instagram.com/allison_stock_inc/" class="links" aria-label="Visit my Instagram profile">
-                <img src="/img/ig-icon.webp" alt="Instagram logo">
+              <a href="https://www.instagram.com/allison_stock_inc/" class="links" aria-label="Visit my Instagram profile" target="_blank" rel="noopener noreferrer">
+                <img src="/img/ig-icon.webp" 
+                  alt="Instagram logo"
+                  width: 2.5rem;
+                  height: 2.5rem;
+                  aspect-ratio: 1 / 1;
+                >
               </a>
             </li>
             <li>
-              <a href="https://www.linkedin.com/in/genny-allison/" class="links" aria-label="Visit my LinkedIn profile">
-                <img src="/img/linkedin-icon.webp" alt="LinkedIn logo">
+              <a href="https://www.linkedin.com/in/genny-allison/" class="links" aria-label="Visit my LinkedIn profile" target="_blank" rel="noopener noreferrer">
+                <img src="/img/linkedin-icon.webp" 
+                  alt="LinkedIn logo"
+                  width: 2.5rem;
+                  height: 2.5rem;
+                  aspect-ratio: 1 / 1;
+                >
               </a>
             </li>
             <li>
-              <a href="https://github.com/Allison2002" class="links" aria-label="Visit my GitHub profile">
-                <img src="/img/git-icon.webp" alt="GitHub logo">
+              <a href="https://github.com/Allison2002" class="links" aria-label="Visit my GitHub profile" target="_blank" rel="noopener noreferrer">
+                <img src="/img/git-icon.webp" 
+                  alt="GitHub logo"width: 2.5rem;
+                  height: 2.5rem;
+                  aspect-ratio: 1 / 1;
+                >
               </a>
             </li>
           </ul>
         </div>
-
       </footer>
     </header>
     <script src="/designer.js"></script>
