--- a/pages/project1.html
+++ b/pages/project1.html
@@ -241,10 +241,10 @@
                 </div>
                 <div class="button-grid">
                   <div class="click-me">
-                    <a href="https://tech-trends-blog.netlify.app">design decoded</a>
+                    <a href="https://tech-trends-blog.netlify.app" target="_blank" rel="noopener noreferrer">design decoded</a>
                   </div>
                   <div class="click-me">  
-                    <a href="https://github.com/Allison2002/tech-trends.git">&lt; inspect the code &gt;</a>
+                    <a href="https://github.com/Allison2002/tech-trends.git" target="_blank" rel="noopener noreferrer">&lt; inspect the code &gt;</a>
                   </div>
                 </div> 
               </div>
@@ -316,10 +316,10 @@
                 </div>
                 <div class="button-grid">
                   <div class="click-me">
-                    <a href="https://tech-trends-blog.netlify.app">design decoded</a>
+                    <a href="https://tech-trends-blog.netlify.app" target="_blank" rel="noopener noreferrer">design decoded</a>
                   </div>
                   <div class="click-me">  
-                    <a href="https://github.com/Allison2002/tech-trends.git">&lt; inspect the code &gt;</a>
+                    <a href="https://github.com/Allison2002/tech-trends.git" target="_blank" rel="noopener noreferrer">&lt; inspect the code &gt;</a>
                   </div>
                 </div> 
               </div>
@@ -675,6 +675,9 @@
                       or
                     <a
                       href="https://website.grader.com/?__hstc=20629287.7b5da137d6ae3b82197a3c1b6c098d04.1731428252014.1732338211911.1732940777826.11&__hssc=20629287.5.1732940777826&__hsfp=2673780978"
+                        target="_blank"
+                        rel="noopener noreferrer"
+                        aria-label="Visit Website Grader on a new tab"
                       >Hubspot
                     </a>
                       to check your site's grade.
@@ -751,10 +754,11 @@
                   </div>
                   <div class="button-grid">
                     <div class="click-me">
-                      <a href="https://tech-trends-blog.netlify.app">design decoded</a>
+                      <a href="https://tech-trends-blog.netlify.app" target="_blank"
+                        rel="noopener noreferrer">design decoded</a>
                     </div>
                     <div class="click-me">  
-                      <a href="https://github.com/Allison2002/tech-trends.git">&lt; inspect the code &gt;</a>
+                      <a href="https://github.com/Allison2002/tech-trends.git" target="_blank" rel="noopener noreferrer">&lt; inspect the code &gt;</a>
                     </div>
                   </div> 
                 </div>
@@ -807,10 +811,10 @@
                   </div>
                   <div class="button-grid">
                     <div class="click-me">
-                      <a href="https://tech-trends-blog.netlify.app">design decoded</a>
+                      <a href="https://tech-trends-blog.netlify.app" target="_blank" rel="noopener noreferrer">design decoded</a>
                     </div>
                     <div class="click-me">  
-                      <a href="https://github.com/Allison2002/tech-trends.git">&lt; inspect the code &gt;</a>
+                      <a href="https://github.com/Allison2002/tech-trends.git" target="_blank" rel="noopener noreferrer">&lt; inspect the code &gt;</a>
                     </div>
                   </div> 
                 </div>
@@ -935,10 +939,10 @@
                   </div>
                   <div class="button-grid">
                     <div class="click-me">
-                      <a href="https://tech-trends-blog.netlify.app">design decoded</a>
+                      <a href="https://tech-trends-blog.netlify.app" target="_blank" rel="noopener noreferrer">design decoded</a>
                     </div>
                     <div class="click-me">  
-                      <a href="https://github.com/Allison2002/tech-trends.git">&lt; inspect the code &gt;</a>
+                      <a href="https://github.com/Allison2002/tech-trends.git" target="_blank" rel="noopener noreferrer">&lt; inspect the code &gt;</a>
                     </div>
                   </div> 
                 </div>
@@ -989,8 +993,8 @@
                   <div class="casestudy">
                     <p><strong>Case Study:</strong> Tech Trends Blog</p>
                     <p><strong>Role:</strong> Full-Stack Developer, AI Content Creator, SEO Specialist</p>
-                    <p><strong>Website:</strong> <a href="https://tech-trends-blog.netlify.app">Tech Trends Blog</a></p>
-                    <p><strong>GitHub Repository:</strong> <a href="https://github.com/Allison2002/tech-trends.git">View the Code</a></p>
+                    <p><strong>Website:</strong> <a href="https://tech-trends-blog.netlify.app" target="_blank" rel="noopener noreferrer">Tech Trends Blog</a></p>
+                    <p><strong>GitHub Repository:</strong> <a href="https://github.com/Allison2002/tech-trends.git" target="_blank" rel="noopener noreferrer">View the Code</a></p>
                   </div>
                   <hr class="casestudy-hr">
                   <div class="casestudy">
@@ -1094,10 +1098,10 @@
                   </div>
                   <div class="button-grid">
                     <div class="click-me">
-                      <a href="https://tech-trends-blog.netlify.app">design decoded</a>
+                      <a href="https://tech-trends-blog.netlify.app" target="_blank" rel="noopener noreferrer">design decoded</a>
                     </div>
                     <div class="click-me">  
-                      <a href="https://github.com/Allison2002/tech-trends.git">&lt; inspect the code &gt;</a>
+                      <a href="https://github.com/Allison2002/tech-trends.git" target="_blank" rel="noopener noreferrer">&lt; inspect the code &gt;</a>
                     </div>
                   </div>  
                 </div>
