--- a/pages/project1.html
+++ b/pages/project1.html
@@ -7,7 +7,6 @@
     <meta name="description" content="Explore Genny Allison's portfolio showcasing projects that merge creativity and code. From engaging animations to responsive designs, each project highlights her skills in UI/UX, front-end development, and client-focused web solutions. Discover the blend of artistry and functionality across a range of digital creations.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">    
 
-
     <link 
       rel="preload" 
       href="/img/girlCoding-mobile.avif" 
@@ -47,7 +46,7 @@
       type="image/avif" 
       media="(min-width: 1200px)" 
     />
-    
+
     <link 
       rel="preload" 
       href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_auto,fl_lossy,fl_force_strip,dpr_auto/v1747049367/welcome_to_tech_trends_tablet_da4vul.avif" 
@@ -156,7 +155,7 @@
               alt="A woman coding on a laptop, symbolizing the integration of creativity and technology in web development"
               width="442"
               height="246"
-              style="aspect-ratio: 1.79 / 1;"
+              style=" object-fit: cover; aspect-ratio: 1.79 / 1; width: 100%; height: auto;"
               loading="eager"
               fetchpriority="high"
               decoding="async"
@@ -207,7 +206,7 @@
                           type="image/avif"
                           width="364" 
                           height="186" 
-                          style="aspect-ratio: 1.957 / 1;  object-fit: cover;" 
+                          style="aspect-ratio: 1.957 / 1;  object-fit: cover; width: 100%; height: auto;" 
                           loading="eager" 
                           fetchpriority="high" 
                           decoding="async"
@@ -284,7 +283,7 @@
                           alt="Tech Trends Blog SEO grade result showing performance and optimization"
                           width="364"
                           height="314"
-                          style="aspect-ratio: 1.16 / 1; object-fit: cover; display: block;"
+                          style="aspect-ratio: 1.16 / 1; object-fit: cover; width: 100%; height: auto; display: block;"
                           loading="lazy"
                           decoding="async"
                         />
@@ -425,7 +424,7 @@
                             alt="Tech Trends Blog SEO grade result showing performance before optimization"
                             width="355"
                             height="376"
-                            style="aspect-ratio: 355 / 376; width: 473; height: 500; object-fit: cover; display: block;"
+                            style="aspect-ratio: 355 / 376; width: 100%; height: auto; object-fit: cover; display: block; "
                             loading="lazy"
                             decoding="async"
                           />
@@ -458,7 +457,7 @@
                             alt="Tech Trends Blog SEO grade result showing performance after optimization"
                             width="355"
                             height="376"
-                            style="aspect-ratio: 355 / 376; width: 480; height: 480; object-fit: cover; display: block;"
+                            style="aspect-ratio: 355 / 376; width: 100%; height: auto; object-fit: cover; display: block;"
                             loading="lazy"
                             decoding="async"
                           />
@@ -538,7 +537,7 @@
                           height="376"
                           loading="lazy"
                           fetchpriority="low"
-                          style="object-fit: cover;aspect-ratio: 473 / 480;"
+                          style="object-fit: cover; aspect-ratio: 370 / 376; width: 100%; height: auto;"
                           decoding="async"
                         />
                       </picture>
@@ -570,7 +569,7 @@
                           alt="Tech Trends Blog SEO grade result showing performance before optimization"
                           width="370"
                           height="393"
-                          style="aspect-ratio: 355 / 376; width: 480; height: 480; object-fit: cover; display: block;"
+                          style="aspect-ratio: 370 / 393; width: 100%; height: auto; object-fit: cover; display: block;"
                           loading="lazy"
                           decoding="async"
                         />
@@ -613,7 +612,7 @@
                         height="501"
                         loading="lazy"
                         fetchpriority="low"
-                        style="object-fit: cover;aspect-ratio: 740 / 1054;"
+                        style="object-fit: cover; aspect-ratio: 351 / 501; width: 100%; height: auto;"
                         decoding="async"
                       />
                     </picture>
@@ -648,7 +647,7 @@
                         height="159"
                         loading="lazy"
                         fetchpriority="low"
-                        style="object-fit: cover;aspect-ratio: 768 / 337;"
+                        style="object-fit: cover;aspect-ratio: 332 / 159; width: 100%; height: auto;"
                         decoding="async" 
                       />
                     </picture>
@@ -742,7 +741,7 @@
                           height="305"
                           loading="lazy"
                           fetchpriority="low"
-                          style="object-fit: cover;aspect-ratio: 364 / 305;"
+                          style="object-fit: cover;aspect-ratio: 364 / 305; width: 100%; height: auto;"
                           decoding="async"     
                           />
                       </picture>
@@ -799,7 +798,7 @@
                           height="425"
                           loading="lazy"
                           fetchpriority="low"
-                          style="object-fit: cover;aspect-ratio: 600 / 700;"
+                          style="object-fit: cover;aspect-ratio: 364 / 425; width: 100%; height: auto;"
                           decoding="async" 
                           />
                       </picture>
@@ -857,7 +856,7 @@
                               height="1255"
                               loading="lazy"
                               fetchpriority="low"
-                              style="object-fit: cover;aspect-ratio: 945 / 3200;"
+                              style="object-fit: cover;aspect-ratio: 370 / 1255; width: 100%; height: auto;"
                               decoding="async" 
                             />
                           </picture>
@@ -891,7 +890,7 @@
                               height="667"
                               loading="lazy"
                               fetchpriority="low"
-                              style="object-fit: cover;aspect-ratio: 1050 / 1890;"
+                              style="object-fit: cover;aspect-ratio: 370 / 667; width: 100%; height: auto;"
                               decoding="sync"   
                             />
                           </picture>
@@ -925,7 +924,7 @@
                               height="1255"
                               loading="lazy"
                               fetchpriority="low"
-                              style="object-fit: cover;aspect-ratio: 945 / 3200;"
+                              style="object-fit: cover;aspect-ratio: 370 / 1255;width: 100%; height: auto;"
                               decoding="async" 
                             />
                           </picture>
@@ -982,7 +981,7 @@
                         height="235"
                         loading="lazy"
                         fetchpriority="low"
-                        style="object-fit: cover;aspect-ratio: 364 / 235;"
+                        style="object-fit: cover;aspect-ratio: 364 / 235; width: 100%; height: auto;"
                         decoding="async"
                       />
                     </picture> 
@@ -1136,7 +1135,7 @@
                           height="159"
                           loading="lazy"
                           fetchpriority="low"
-                          style="object-fit: cover;aspect-ratio: 768 / 337;"
+                          style="object-fit: cover;aspect-ratio: 364 / 159; width: 100%; height: auto;"
                           decoding="async" 
                         />
                       </picture> 
