--- a/pages/project1.html
+++ b/pages/project1.html
@@ -151,7 +151,7 @@
               sizes="100vw"
             />
             <img 
-              src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_auto,fl_lossy,fl_force_strip,dpr_auto/v1733410752/girlCoding_exzsbe.avif"
+              src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_442,h_246,fl_lossy,fl_force_strip,dpr_auto/v1733410752/girlCoding_exzsbe.avif"
               alt="A woman coding on a laptop, symbolizing the integration of creativity and technology in web development"
               width="442"
               height="246"
