moved back to top button to the left side

--- a/pages/project1.html
+++ b/pages/project1.html
@@ -1172,7 +1172,10 @@
         <li><a href="#casestudy">the case study</a></li>
         <li><a href="#contact">the contact me</a></li>
       </ul>
-      <button id="back-to-top" class="hidden">back to top</button>
+      
+    </div>
+    <div>
+      <button class="back-to-top" id="back-to-top" class="hidden">back to top</button>
     </div>
     <div id="footer"></div>
     <script src="/assets/script.js"></script>
