--- a/pages/project1.html
+++ b/pages/project1.html
@@ -9,7 +9,7 @@
 
     <link 
       rel="preload" 
-      href="/img/girlCoding-mobile.avif" 
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_442,h_246,fl_lossy,fl_force_strip,dpr_auto/v1733410752/girlCoding_exzsbe.avif" 
       as="image" 
       type="image/avif" 
       media="(max-width: 480px)"
