--- a/pages/project1.html
+++ b/pages/project1.html
@@ -9,7 +9,7 @@
 
     <link 
       rel="preload" 
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_442,h_246,fl_lossy,fl_force_strip,dpr_auto/v1733410752/girlCoding_exzsbe.avif" 
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_442,h_246,fl_lossy,fl_force_strip/v1733410752/girlCoding_exzsbe.avif" 
       as="image" 
       type="image/avif" 
       media="(max-width: 480px)"
@@ -17,7 +17,7 @@
 
     <link 
       rel="preload" 
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_auto,fl_lossy,fl_force_strip,dpr_auto/v1747014137/girlCoding-desktop_qjepoe.avif" 
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_528,h_298,fl_lossy,fl_force_strip/v1747014137/girlCoding-desktop_qjepoe.avif" 
       as="image" 
       type="image/avif" 
       media="(min-width: 1200px)" 
@@ -25,7 +25,7 @@
 
     <link 
       rel="preload" 
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_auto,fl_lossy,fl_force_strip,dpr_auto/v1747014135/girlCoding-tablet_uund2i.avif" 
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_736,h_418,fl_lossy,fl_force_strip/v1747014135/girlCoding-tablet_uund2i.avif" 
       as="image" 
       type="image/avif" 
       media="(min-width: 481px) and (max-width: 1199px)" 
@@ -41,7 +41,7 @@
     
     <link 
       rel="preload" 
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_auto,fl_lossy,fl_force_strip,dpr_auto/v1747049366/welcome_to_tech_trends_desktop_kd0jdv.avif" 
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_auto,fl_lossy,fl_force_strip,c_fill,dpr_auto/v1747049366/welcome_to_tech_trends_desktop_kd0jdv.avif" 
       as="image" 
       type="image/avif" 
       media="(min-width: 1200px)" 
@@ -49,7 +49,7 @@
 
     <link 
       rel="preload" 
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_auto,fl_lossy,fl_force_strip,dpr_auto/v1747049367/welcome_to_tech_trends_tablet_da4vul.avif" 
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_auto,fl_lossy,fl_force_strip,c_fill,dpr_auto/v1747049367/welcome_to_tech_trends_tablet_da4vul.avif" 
       as="image" 
       type="image/avif" 
       media="(min-width: 481px) and (max-width: 1199px)" 
@@ -139,19 +139,19 @@
         <div class="canvas-skills-img">
           <picture>
             <source
-              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_auto,fl_lossy,fl_force_strip,dpr_auto/v1747014137/girlCoding-desktop_qjepoe.avif"
+              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_528,h_298,fl_lossy,fl_force_strip/v1747014137/girlCoding-desktop_qjepoe.avif"
               type="image/avif"
               media="(min-width: 1200px)"
               sizes="100vw"
             />
             <source
-              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_auto,fl_lossy,fl_force_strip,dpr_auto/v1747014135/girlCoding-tablet_uund2i.avif"
+              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_736,h_418,fl_lossy,fl_force_strip/v1747014135/girlCoding-tablet_uund2i.avif"
               type="image/avif"
               media="(min-width: 481px) and (max-width: 1199px)"
               sizes="100vw"
             />
             <img 
-              src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_442,h_246,fl_lossy,fl_force_strip,dpr_auto/v1733410752/girlCoding_exzsbe.avif"
+              src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_442,h_246,fl_lossy,fl_force_strip/v1733410752/girlCoding_exzsbe.avif"
               alt="A woman coding on a laptop, symbolizing the integration of creativity and technology in web development"
               width="442"
               height="246"
