--- a/pages/project1.html
+++ b/pages/project1.html
@@ -33,30 +33,6 @@
 
     <link 
       rel="preload" 
-      href="/img/welcome_to_tech_trends_mobile.avif" 
-      as="image" 
-      type="image/avif" 
-      media="(max-width: 480px)"
-    >
-    
-    <link 
-      rel="preload" 
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_auto,fl_lossy,fl_force_strip,c_fill,dpr_auto/v1747049366/welcome_to_tech_trends_desktop_kd0jdv.avif" 
-      as="image" 
-      type="image/avif" 
-      media="(min-width: 1200px)" 
-    />
-
-    <link 
-      rel="preload" 
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_auto,fl_lossy,fl_force_strip,c_fill,dpr_auto/v1747049367/welcome_to_tech_trends_tablet_da4vul.avif" 
-      as="image" 
-      type="image/avif" 
-      media="(min-width: 481px) and (max-width: 1199px)" 
-    />
-
-    <link 
-      rel="preload" 
       href="/assets/fonts/PlayfairDisplay-VariableFont_wght.woff2"
       as="font" 
       type="font/woff2" 
@@ -134,39 +110,37 @@
     <section>
       <div id="nav"></div>
     </section>  
-    <header>
-      <div class="canvas-skills-grid">
-        <div class="canvas-skills-img">
-          <picture>
-            <source
-              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_528,h_298,fl_lossy,fl_force_strip/v1747014137/girlCoding-desktop_qjepoe.avif"
-              type="image/avif"
-              media="(min-width: 1200px)"
-              sizes="100vw"
-            />
-            <source
-              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_736,h_418,fl_lossy,fl_force_strip/v1747014135/girlCoding-tablet_uund2i.avif"
-              type="image/avif"
-              media="(min-width: 481px) and (max-width: 1199px)"
-              sizes="100vw"
-            />
-            <img 
-              src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_442,h_246,fl_lossy,fl_force_strip/v1733410752/girlCoding_exzsbe.avif"
-              alt="A woman coding on a laptop, symbolizing the integration of creativity and technology in web development"
-              width="442"
-              height="246"
-              loading="eager"
-              fetchpriority="high"
-              decoding="async"
-            />
-          </picture>
-        </div>
-        <div class="canvas-skills-title">
-          <h1>a canvas of code:</h1>
-          <h2>showcasing the craft</h2>
-        </div>
+    <div class="canvas-skills-grid">
+      <div class="canvas-skills-img">
+        <picture>
+          <source
+            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_528,h_298,fl_lossy,fl_force_strip/v1747014137/girlCoding-desktop_qjepoe.avif"
+            type="image/avif"
+            media="(min-width: 1200px)"
+            sizes="100vw"
+          />
+          <source
+            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_736,h_418,fl_lossy,fl_force_strip/v1747014135/girlCoding-tablet_uund2i.avif"
+            type="image/avif"
+            media="(min-width: 481px) and (max-width: 1199px)"
+            sizes="100vw"
+          />
+          <img 
+            src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_442,h_246,fl_lossy,fl_force_strip/v1733410752/girlCoding_exzsbe.avif"
+            alt="A woman coding on a laptop, symbolizing the integration of creativity and technology in web development"
+            width="442"
+            height="246"
+            loading="eager"
+            fetchpriority="high"
+            decoding="async"
+          />
+        </picture>
       </div>
-    </header>
+      <div class="canvas-skills-title">
+        <h1>a canvas of code:</h1>
+        <h2>showcasing the craft</h2>
+      </div>
+    </div>
     <main class="about-me" id="projects">
         <!--resume-->        
       <div class="black-container">
@@ -206,8 +180,8 @@
                           width="364" 
                           height="186" 
                           style="aspect-ratio: 1.957 / 1;  object-fit: cover; width: 100%; height: auto;" 
-                          loading="eager" 
-                          fetchpriority="high" 
+                          loading="lazy" 
+                          fetchpriority="low" 
                           decoding="async"
                         />
                       </picture>
